# meeseeks_html5ever

./: .travis.yml  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  checksum-Elixir.MeeseeksHtml5ever.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml  tests.yml
config/: config.exs
lib/: meeseeks_html5ever.ex
lib/meeseeks_html5ever/: native.ex
native/meeseeks_html5ever_nif/: Cargo.toml
native/meeseeks_html5ever_nif/.cargo/: config
native/meeseeks_html5ever_nif/src/: flat_dom.rs  lib.rs
test/: meeseeks_html5ever_test.exs
test/data/: remove_from_parent.html  template.html
