[package]
name = "meeseeks_html5ever_nif"
version = "0.13.2"
authors = ["Mischov <mmischov@gmail.com>"]
edition = "2018"

[lib]
name = "meeseeks_html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22"

html5ever = "0.22"
xml5ever = "0.12"
markup5ever = "0.7"
tendril = "0.4"