[package]
name = "meeseeks_html5ever_nif"
version = "0.14.1"
authors = ["Mischov <mmischov@gmail.com>"]
edition = "2018"

[lib]
name = "meeseeks_html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.27"

html5ever = "0.26"
xml5ever = "0.17"
markup5ever = "0.11"

tendril = "0.4"
lazy_static = "1.4"
