[package]
name = "meeseeks_html5ever_nif"
version = "0.15.0"
authors = ["Mischov <mmischov@gmail.com>"]
edition = "2018"

[lib]
name = "meeseeks_html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"

html5ever = "0.26"
xml5ever = "0.17"
markup5ever = "0.11"

tendril = "0.4"
lazy_static = "1.4"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]